@@ -1,3 +1,11 @@
+2008-06-09  Carlos Garnacho  <carlos@imendio.com>
+
+	* src/libtracker-db/tracker-db-manager.c (set_up_databases)
+	(db_interface_create) (tracker_db_manager_init)
+	(tracker_db_manager_shutdown) (tracker_db_manager_get_db_interface)
+	(tracker_db_manager_get_db_interface_content): Allow creating
+	databases lazily, instead of creating them all on initialization.
+
 2008-06-09  Martyn Russell  <martyn@imendio.com>
 
 	* src/libtracker-db/tracker-db-manager.c:
